--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        package="com.gmail.danylooliinyk.collectcirclesgame">
+        package="com.gmail.danylooliinyk.collectcatsgame">
 
     <application
             android:allowBackup="true"
@@ -9,13 +9,13 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.CollectCirclesGame"
+            android:theme="@style/Theme.CollectCatsGame"
             tools:targetApi="31">
         <activity
-                android:name=".MainActivity"
+                android:name="com.gmail.danylooliinyk.collectcatsgame.MainActivity"
                 android:exported="true"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.CollectCirclesGame.NoActionBar">
+                android:theme="@style/Theme.CollectCatsGame.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
