--- a/collectcatsgame/build.gradle
+++ b/collectcatsgame/build.gradle
@@ -1,6 +1,37 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
+}
+
+afterEvaluate {
+//    publishing {
+//        publications {
+//            aar(MavenPublication) {
+//                groupId "com.gmail.danylooliinyk"
+//                artifactId "collectcatsgame"
+//                version "0.1"
+//
+//                artifact bundleReleaseAar
+//            }
+//        }
+//    }
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId 'com.gmail.danylooliinyk'
+                artifactId 'collectcatsgame'
+                version = '0.1'
+            }
+            debug(MavenPublication) {
+                from components.debug
+                groupId 'com.gmail.danylooliinyk'
+                artifactId 'collectcatsgame'
+                version = '0.1'
+            }
+        }
+    }
 }
 
 android {
@@ -27,16 +58,21 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    publishing {
+        singleVariant("release") {
+            // if you don't want sources/javadoc, remove these lines
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
     // Kotlin
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
 
+    // Android
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
-//    implementation 'com.google.android.material:material:1.6.1'
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
